<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:text="@string/travel_story"
            android:textColor="#800"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            tools:text="Hello"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonToWrite"
            android:text="@string/click_to_write"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:onClick="write"
            />

        <Button
            android:id="@+id/buttonMyTrips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/my_tripsBtn"
            android:textAllCaps="false"
            android:textSize="25sp"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ts_eliot"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:gravity="left"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ts_eliotName"
            android:textSize="18dp"
            android:gravity="center"/>


    </LinearLayout>

</RelativeLayout>